// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CollectionCard should render correctly - no data 1`] = `
<DocumentFragment>
  <article
    class="pf-c-card"
    data-ouia-component-id="system-properties-card"
    data-ouia-component-type="PF4/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-c-card__body"
    >
      <div
        class="pf-l-stack pf-m-gutter"
      >
        <div
          class="pf-l-stack__item"
        >
          <div
            class="pf-c-content"
          >
            <h1
              class=""
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF4/Text"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              Collection information
            </h1>
          </div>
        </div>
        <div
          class="pf-l-stack__item pf-m-fill"
        >
          <div
            class="pf-c-content"
          >
            <dl
              class=""
            >
              <dt
                class=""
                data-ouia-component-id="Insights client title"
              >
                Insights client
              </dt>
              <dd
                class=""
                data-ouia-component-id="Insights client value"
              >
                <div
                  class="pf-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                >
                  <span
                    class="pf-u-screen-reader"
                  />
                </div>
              </dd>
              <dt
                class=""
                data-ouia-component-id="Last check-in title"
              >
                Last check-in
              </dt>
              <dd
                class=""
                data-ouia-component-id="Last check-in value"
              >
                <div
                  class="pf-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                >
                  <span
                    class="pf-u-screen-reader"
                  />
                </div>
              </dd>
              <dt
                class=""
                data-ouia-component-id="Registered title"
              >
                Registered
              </dt>
              <dd
                class=""
                data-ouia-component-id="Registered value"
              >
                <div
                  class="pf-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                >
                  <span
                    class="pf-u-screen-reader"
                  />
                </div>
              </dd>
              <dt
                class=""
                data-ouia-component-id="Insights id title"
              >
                Insights id
              </dt>
              <dd
                class=""
                data-ouia-component-id="Insights id value"
              >
                <div
                  class="pf-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                >
                  <span
                    class="pf-u-screen-reader"
                  />
                </div>
              </dd>
              <dt
                class=""
                data-ouia-component-id="Reporter title"
              >
                Reporter
              </dt>
              <dd
                class=""
                data-ouia-component-id="Reporter value"
              >
                <div
                  class="pf-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                >
                  <span
                    class="pf-u-screen-reader"
                  />
                </div>
              </dd>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </article>
</DocumentFragment>
`;

exports[`CollectionCard should render correctly with data 1`] = `
<DocumentFragment>
  <article
    class="pf-c-card"
    data-ouia-component-id="system-properties-card"
    data-ouia-component-type="PF4/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-c-card__body"
    >
      <div
        class="pf-l-stack pf-m-gutter"
      >
        <div
          class="pf-l-stack__item"
        >
          <div
            class="pf-c-content"
          >
            <h1
              class=""
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF4/Text"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              Collection information
            </h1>
          </div>
        </div>
        <div
          class="pf-l-stack__item pf-m-fill"
        >
          <div
            class="pf-c-content"
          >
            <dl
              class=""
            >
              <dt
                class=""
                data-ouia-component-id="Insights client title"
              >
                Insights client
              </dt>
              <dd
                class=""
                data-ouia-component-id="Insights client value"
              >
                <span>
                  test-client
                </span>
              </dd>
              <dt
                class=""
                data-ouia-component-id="Last check-in title"
              >
                Last check-in
              </dt>
              <dd
                class=""
                data-ouia-component-id="Last check-in value"
              >
                01 Jun 2014
              </dd>
              <dt
                class=""
                data-ouia-component-id="Registered title"
              >
                Registered
              </dt>
              <dd
                class=""
                data-ouia-component-id="Registered value"
              >
                01 Apr 2014
              </dd>
              <dt
                class=""
                data-ouia-component-id="Insights id title"
              >
                Insights id
              </dt>
              <dd
                class=""
                data-ouia-component-id="Insights id value"
              >
                Not available
              </dd>
              <dt
                class=""
                data-ouia-component-id="Reporter title"
              >
                Reporter
              </dt>
              <dd
                class=""
                data-ouia-component-id="Reporter value"
              >
                Not available
              </dd>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </article>
</DocumentFragment>
`;

exports[`CollectionCard should render extra 1`] = `
<DocumentFragment>
  <article
    class="pf-c-card"
    data-ouia-component-id="system-properties-card"
    data-ouia-component-type="PF4/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-c-card__body"
    >
      <div
        class="pf-l-stack pf-m-gutter"
      >
        <div
          class="pf-l-stack__item"
        >
          <div
            class="pf-c-content"
          >
            <h1
              class=""
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF4/Text"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              Collection information
            </h1>
          </div>
        </div>
        <div
          class="pf-l-stack__item pf-m-fill"
        >
          <div
            class="pf-c-content"
          >
            <dl
              class=""
            >
              <dt
                class=""
                data-ouia-component-id="Insights client title"
              >
                Insights client
              </dt>
              <dd
                class=""
                data-ouia-component-id="Insights client value"
              >
                <span>
                  test-client
                </span>
              </dd>
              <dt
                class=""
                data-ouia-component-id="Last check-in title"
              >
                Last check-in
              </dt>
              <dd
                class=""
                data-ouia-component-id="Last check-in value"
              >
                01 Jun 2014
              </dd>
              <dt
                class=""
                data-ouia-component-id="Registered title"
              >
                Registered
              </dt>
              <dd
                class=""
                data-ouia-component-id="Registered value"
              >
                01 Apr 2014
              </dd>
              <dt
                class=""
                data-ouia-component-id="Insights id title"
              >
                Insights id
              </dt>
              <dd
                class=""
                data-ouia-component-id="Insights id value"
              >
                Not available
              </dd>
              <dt
                class=""
                data-ouia-component-id="Reporter title"
              >
                Reporter
              </dt>
              <dd
                class=""
                data-ouia-component-id="Reporter value"
              >
                Not available
              </dd>
              <dt
                class=""
                data-ouia-component-id="something title"
              >
                something
              </dt>
              <dd
                class=""
                data-ouia-component-id="something value"
              >
                test
              </dd>
              <dt
                class=""
                data-ouia-component-id="with click title"
              >
                with click
              </dt>
              <dd
                class=""
                data-ouia-component-id="with click value"
              >
                <div>
                  <a
                    href="/undefined"
                  >
<<<<<<< HEAD
                    <div
                      className="pf-l-stack pf-m-gutter"
                    >
                      <StackItem>
                        <div
                          className="pf-l-stack__item"
                        >
                          <TextContent>
                            <div
                              className="pf-c-content"
                            >
                              <Text
                                component="h1"
                              >
                                <h1
                                  className=""
                                  data-ouia-component-id="OUIA-Generated-Text-9"
                                  data-ouia-component-type="PF4/Text"
                                  data-ouia-safe={true}
                                  data-pf-content={true}
                                >
                                  Collection information
                                </h1>
                              </Text>
                            </div>
                          </TextContent>
                        </div>
                      </StackItem>
                      <StackItem
                        isFilled={true}
                      >
                        <div
                          className="pf-l-stack__item pf-m-fill"
                        >
                          <TextContent>
                            <div
                              className="pf-c-content"
                            >
                              <TextList
                                component="dl"
                              >
                                <dl
                                  className=""
                                >
                                  <TextListItem
                                    component="dt"
                                    data-ouia-component-id="Insights client title"
                                  >
                                    <dt
                                      className=""
                                      data-ouia-component-id="Insights client title"
                                    >
                                      Insights client
                                    </dt>
                                  </TextListItem>
                                  <TextListItem
                                    component="dd"
                                    data-ouia-component-id="Insights client value"
                                  >
                                    <dd
                                      className=""
                                      data-ouia-component-id="Insights client value"
                                    >
                                      <VersionTooltip
                                        client="test-client"
                                        egg="test-egg"
                                      >
                                        <Tooltip
                                          content={
                                            <React.Fragment>
                                              <p>
                                                RPM version: 
                                                test-client
                                              </p>
                                              <p>
                                                Dynamic update version: 
                                                test-egg
                                              </p>
                                            </React.Fragment>
                                          }
                                        >
                                          <Popper
                                            appendTo={[Function]}
                                            distance={15}
                                            enableFlip={true}
                                            flipBehavior={
                                              Array [
                                                "top",
                                                "right",
                                                "bottom",
                                                "left",
                                                "top",
                                                "right",
                                                "bottom",
                                              ]
                                            }
                                            isVisible={false}
                                            onBlur={[Function]}
                                            onDocumentClick={false}
                                            onDocumentKeyDown={[Function]}
                                            onFocus={[Function]}
                                            onMouseEnter={[Function]}
                                            onMouseLeave={[Function]}
                                            onPopperMouseEnter={[Function]}
                                            onPopperMouseLeave={[Function]}
                                            onTriggerEnter={[Function]}
                                            placement="top"
                                            popper={
                                              <div
                                                aria-live="off"
                                                className="pf-c-tooltip"
                                                id="pf-tooltip-7"
                                                role="tooltip"
                                                style={
                                                  Object {
                                                    "maxWidth": null,
                                                    "opacity": 0,
                                                    "transition": "opacity 300ms cubic-bezier(.54, 1.5, .38, 1.11)",
                                                  }
                                                }
                                              >
                                                <TooltipArrow />
                                                <TooltipContent
                                                  isLeftAligned={false}
                                                >
                                                  <React.Fragment>
                                                    <p>
                                                      RPM version: 
                                                      test-client
                                                    </p>
                                                    <p>
                                                      Dynamic update version: 
                                                      test-egg
                                                    </p>
                                                  </React.Fragment>
                                                </TooltipContent>
                                              </div>
                                            }
                                            popperMatchesTriggerWidth={false}
                                            positionModifiers={
                                              Object {
                                                "bottom": "pf-m-bottom",
                                                "bottom-end": "pf-m-bottom-right",
                                                "bottom-start": "pf-m-bottom-left",
                                                "left": "pf-m-left",
                                                "left-end": "pf-m-left-bottom",
                                                "left-start": "pf-m-left-top",
                                                "right": "pf-m-right",
                                                "right-end": "pf-m-right-bottom",
                                                "right-start": "pf-m-right-top",
                                                "top": "pf-m-top",
                                                "top-end": "pf-m-top-right",
                                                "top-start": "pf-m-top-left",
                                              }
                                            }
                                            removeFindDomNode={false}
                                            trigger={
                                              <span>
                                                test-client
                                              </span>
                                            }
                                            zIndex={9999}
                                          >
                                            <FindRefWrapper
                                              onFoundRef={[Function]}
                                            >
                                              <span>
                                                test-client
                                              </span>
                                            </FindRefWrapper>
                                          </Popper>
                                        </Tooltip>
                                      </VersionTooltip>
                                    </dd>
                                  </TextListItem>
                                  <TextListItem
                                    component="dt"
                                    data-ouia-component-id="Last check-in title"
                                  >
                                    <dt
                                      className=""
                                      data-ouia-component-id="Last check-in title"
                                    >
                                      Last check-in
                                    </dt>
                                  </TextListItem>
                                  <TextListItem
                                    component="dd"
                                    data-ouia-component-id="Last check-in value"
                                  >
                                    <dd
                                      className=""
                                      data-ouia-component-id="Last check-in value"
                                    >
                                      <DateFormat
                                        date="6/01/2014"
                                        type="onlyDate"
                                      >
                                        01 Jun 2014
                                      </DateFormat>
                                    </dd>
                                  </TextListItem>
                                  <TextListItem
                                    component="dt"
                                    data-ouia-component-id="Registered title"
                                  >
                                    <dt
                                      className=""
                                      data-ouia-component-id="Registered title"
                                    >
                                      Registered
                                    </dt>
                                  </TextListItem>
                                  <TextListItem
                                    component="dd"
                                    data-ouia-component-id="Registered value"
                                  >
                                    <dd
                                      className=""
                                      data-ouia-component-id="Registered value"
                                    >
                                      <DateFormat
                                        date="04/01/2014"
                                        type="onlyDate"
                                      >
                                        01 Apr 2014
                                      </DateFormat>
                                    </dd>
                                  </TextListItem>
                                  <TextListItem
                                    component="dt"
                                    data-ouia-component-id="Insights id title"
                                  >
                                    <dt
                                      className=""
                                      data-ouia-component-id="Insights id title"
                                    >
                                      Insights id
                                    </dt>
                                  </TextListItem>
                                  <TextListItem
                                    component="dd"
                                    data-ouia-component-id="Insights id value"
                                  >
                                    <dd
                                      className=""
                                      data-ouia-component-id="Insights id value"
                                    >
                                      Not available
                                    </dd>
                                  </TextListItem>
                                  <TextListItem
                                    component="dt"
                                    data-ouia-component-id="Reporter title"
                                  >
                                    <dt
                                      className=""
                                      data-ouia-component-id="Reporter title"
                                    >
                                      Reporter
                                    </dt>
                                  </TextListItem>
                                  <TextListItem
                                    component="dd"
                                    data-ouia-component-id="Reporter value"
                                  >
                                    <dd
                                      className=""
                                      data-ouia-component-id="Reporter value"
                                    >
                                      Not available
                                    </dd>
                                  </TextListItem>
                                  <TextListItem
                                    component="dt"
                                    data-ouia-component-id="something title"
                                  >
                                    <dt
                                      className=""
                                      data-ouia-component-id="something title"
                                    >
                                      something
                                    </dt>
                                  </TextListItem>
                                  <TextListItem
                                    component="dd"
                                    data-ouia-component-id="something value"
                                  >
                                    <dd
                                      className=""
                                      data-ouia-component-id="something value"
                                    >
                                      test
                                    </dd>
                                  </TextListItem>
                                  <TextListItem
                                    component="dt"
                                    data-ouia-component-id="with click title"
                                  >
                                    <dt
                                      className=""
                                      data-ouia-component-id="with click title"
                                    >
                                      with click
                                    </dt>
                                  </TextListItem>
                                  <TextListItem
                                    component="dd"
                                    data-ouia-component-id="with click value"
                                  >
                                    <dd
                                      className=""
                                      data-ouia-component-id="with click value"
                                    >
                                      <div>
                                        <Clickable
                                          onClick={[Function]}
                                          value="1 tests"
                                        >
                                          <Link
                                            to="localhost:3000/example/path/undefined"
                                          >
                                            <a
                                              href="localhost:3000/example/path/undefined"
                                            >
                                              1 tests
                                            </a>
                                          </Link>
                                        </Clickable>
                                      </div>
                                    </dd>
                                  </TextListItem>
                                </dl>
                              </TextList>
                            </div>
                          </TextContent>
                        </div>
                      </StackItem>
                    </div>
                  </Stack>
=======
                    1 tests
                  </a>
>>>>>>> f3af141 (chore(Cards): Convert tests to testing-library)
                </div>
              </dd>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </article>
</DocumentFragment>
`;
